ROS2_Foxy/log/build_2024-10-31_06-20-13/fair_drip/stderr.log
  File "/root/ros2_ws/src/Ajou_Drip_Project/ROS2_Foxy/install/fair_drip/lib/python3.8/site-packages/fair_drip/robot_test.py", line 144
    
    ^
SyntaxError: unexpected EOF while parsing

